--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/victory": "^35.0.0",
+    "axios": "^1.3.2",
+    "danfojs": "^1.1.2",
+    "data-forge": "^1.9.6",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swr": "^2.0.3",
+    "victory": "^36.6.8"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
