--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
     "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.191",
+    "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/victory": "^35.0.0",
