--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/lab": "^5.0.0-alpha.120",
     "@mui/material": "^5.11.8",
     "axios": "^1.3.3",
     "lodash": "^4.17.21",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
+    "@mdx-js/rollup": "^2.3.0",
     "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.13.0",
