--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.9",
     "@mui/lab": "^5.0.0-alpha.120",
     "@mui/material": "^5.11.8",
     "axios": "^1.3.3",
+    "immer": "^9.0.19",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,6 +30,14 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
     "@mdx-js/rollup": "^2.3.0",
+    "@storybook/addon-essentials": "^7.0.0-beta.49",
+    "@storybook/addon-interactions": "^7.0.0-beta.49",
+    "@storybook/addon-links": "^7.0.0-beta.49",
+    "@storybook/blocks": "^7.0.0-beta.49",
+    "@storybook/jest": "^0.0.10",
+    "@storybook/react": "^7.0.0-beta.49",
+    "@storybook/react-vite": "^7.0.0-beta.49",
+    "@storybook/testing-library": "^0.0.14-next.1",
     "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.13.0",
@@ -34,6 +46,8 @@
     "@types/victory": "^35.0.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "prettier": "^2.8.4",
+    "prop-types": "^15.8.1",
+    "storybook": "^7.0.0-beta.49",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
