--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
+    "react-flip-toolkit": "^7.0.17",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "swr": "^2.0.3",
