--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/lab": "^5.0.0-alpha.120",
     "@mui/material": "^5.11.8",
+    "@recoiljs/refine": "^0.1.1",
     "axios": "^1.3.3",
     "immer": "^9.0.19",
     "lodash": "^4.17.21",
@@ -25,6 +26,7 @@
     "react-flip-toolkit": "^7.0.17",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
+    "recoil": "^0.7.6",
     "swr": "^2.0.3",
     "victory": "^36.6.8"
   },
