--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "recoil": "^0.7.6",
+    "recoil-sync": "^0.2.0",
     "swr": "^2.0.3",
     "victory": "^36.6.8"
   },
