--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/lab": "^5.0.0-alpha.120",
     "@mui/material": "^5.11.8",
+    "@mui/x-data-grid": "^5.17.25",
     "@recoiljs/refine": "^0.1.1",
     "axios": "^1.3.3",
     "immer": "^9.0.19",
     "lodash": "^4.17.21",
+    "papaparse": "^5.3.2",
+    "re-template-tag": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
@@ -45,6 +48,8 @@
     "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.13.0",
+    "@types/papaparse": "^5.3.7",
+    "@types/re-template-tag": "^2.0.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/victory": "^35.0.0",
