--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-data-grid": "^5.17.25",
     "@recoiljs/refine": "^0.1.1",
     "axios": "^1.3.3",
+    "data-forge": "^1.9.6",
     "immer": "^9.0.19",
     "lodash": "^4.17.21",
     "papaparse": "^5.3.2",
