Add charting based on Recharts

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@recoiljs/refine": "^0.1.1",
     "axios": "^1.3.3",
     "data-forge": "^1.9.6",
+    "downloadjs": "^1.4.7",
     "immer": "^9.0.19",
     "lodash": "^4.17.21",
     "papaparse": "^5.3.2",
@@ -30,10 +31,10 @@
     "react-flip-toolkit": "^7.0.17",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
+    "recharts": "^2.4.3",
     "recoil": "^0.7.6",
     "recoil-sync": "^0.2.0",
-    "swr": "^2.0.3",
-    "victory": "^36.6.8"
+    "swr": "^2.0.3"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
@@ -47,13 +48,13 @@
     "@storybook/react-vite": "^7.0.0-beta.49",
     "@storybook/testing-library": "^0.0.14-next.1",
     "@types/axios": "^0.14.0",
+    "@types/downloadjs": "^1.4.3",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.13.0",
     "@types/papaparse": "^5.3.7",
     "@types/re-template-tag": "^2.0.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@types/victory": "^35.0.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "prettier": "^2.8.4",
     "prop-types": "^15.8.1",
