--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "prop-types": "^15.8.1",
     "storybook": "^7.0.0-beta.49",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-qrcode": "^0.2.1"
   }
 }
