--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -60,6 +62,7 @@
     "storybook": "^7.0.0-beta.49",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
-    "vite-plugin-qrcode": "^0.2.1"
+    "vite-plugin-qrcode": "^0.2.1",
+    "vitest": "^0.29.7"
   }
 }
