--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-reverse-portal": "^2.1.1",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
+    "react-string-replace": "^1.1.0",
     "recharts": "^2.4.3",
     "recoil": "^0.7.6",
     "recoil-sync": "^0.2.0",
