--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@mui/material": "^5.11.8",
     "@mui/x-data-grid": "^5.17.25",
     "@recoiljs/refine": "^0.1.1",
-    "axios": "^1.3.3",
+    "@tanstack/react-query": "^4.28.0",
     "data-forge": "^1.9.6",
     "downloadjs": "^1.4.7",
     "immer": "^9.0.19",
@@ -38,7 +38,7 @@
     "recharts": "^2.4.3",
     "recoil": "^0.7.6",
     "recoil-sync": "^0.2.0",
-    "swr": "^2.0.3"
+    "wretch": "^2.5.1"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
