--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,50 @@
 name: Deploy to GitHub Pages
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 jobs:
+  data-pipeline:
+    runs-on: ubuntu-latest
+
+    env:
+      RENV_PATHS_ROOT: ~/.local/share/env
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: 4.2.3
+      - name: Cache packages
+        uses: actions/cache@v1
+        with:
+          path: ${{ env.RENV_PATHS_ROOT }}
+          key: ${{ runner.os }}-renv-${{ hashFiles('**/renv.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-renv-
+
+      - name: Restore packages
+        shell: Rscript {0}
+        working-directory: data-processing/pipeline
+        run: |
+          if (!requireNamespace("renv", quietly = TRUE)) install.packages("renv")
+          renv::restore()
+
+      - name: Run pipeline
+        env:
+          TEAM_IN_DIR: ${{ env.GITHUB_WORKSPACE }}/data-processing/data-input
+          TEAM_OUT_DIR: ${{ env.GITHUB_WORKSPACE }}/data-processing/data-output
+        working-directory: data-processing/pipeline
+        run: R run.R
+      - name: Upload data artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: data
+          path: data-processsing/data-output/
+
   build-and-deploy:
     runs-on: ubuntu-latest
+    needs:
+      - data-pipeline
 
     strategy:
       matrix:
@@ -25,9 +65,10 @@ jobs:
         run: npm run build
 
       - name: Download Data
-        env:
-          DATA_FILE_URL: ${{ secrets.DATA_FILE_URL }}
-        run:  wget -qO- $DATA_FILE_URL | tar xvz -C dist/data
+        uses: actions/download-artifact@v3
+        with:
+          name: data
+          path: dist/data
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.4
